# Metapulse-world

./: .gitignore  .gitmodules  CMakeLists.txt  editor.cfg  export.bat  export.sh  imgui.ini  launch_client.cfg  launch_client.cmd  launch_client.ps1  launch_server.cfg  launch_server.cmd  project.json  project.json.bak0
Assets/: blank_screen.fbx  ground_metapulse.fbx  metapulse_character.fbx  metapulse_webview_frame.fbx  player.material  red.material
Assets/InputBindings/: FirstPersonInput.inputbindings  player.inputbindings
Assets/Scripts/: inputScript.lua  money_display.lua  setIsHandlingEvents.lua  start_menu_script.lua
Assets/UI/: chat_box.uicanvas  hud.uicanvas  ingame_menu.uicanvas  inventory_menu.uicanvas  start_menu.uicanvas  trade_menu.uicanvas  tradeoffer.uicanvas  traderequest_menu.uicanvas  user_selection.uicanvas
CustomGems/AuthClient/: CMakeLists.txt  gem.json
Custom_Gems/Metapulse-Auth-Client-gem/: CMakeLists.txt  gem.json
Gem/: CMakeLists.txt  New Text Document.txt  gem.json  metapulse-world_files.cmake  metapulse-world_shared_files.cmake  metapulseWorld_autogen_files.cmake  metapulseWorld_client_files.cmake  metapulseWorld_files.cmake  metapulseWorld_shared_files.cmake
Gem/Registry/: assetprocessor_settings.setreg
Gem/Source/: Metapulse-worldModule.cpp  Metapulse-worldSystemComponent.cpp  metapulseWorldModule.cpp  metapulseWorldSystemComponent.h  (+1 more)
Libraries/: CMakeLists.txt  PostBuild.cmake
Prefabs/: TradeNotifications.prefab  UserRegistry.prefab  player.prefab  user.prefab
Registry/: autoexec.game.setreg  physxsystemconfiguration.setreg
(+124 files in other folders)
